# kcli

./: CONTRIBUTING.md  Cargo.toml  README.md  kafka-server.sh
.bash_completion.d/: kfcli.bash
.github/workflows/: ci.yml  release.yml  test.yml
.zfunc/: _kfcli
src/: README.md  cli.rs  config.rs  kafka.rs  main.rs
