[package]
name = "kfcli"
version = "0.2.1-alpha"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.23", features = ["derive"] }
clap_complete = "4.5.40"
colored_json = "5.0.0"
prettytable-rs = "0.10.0"
rdkafka = { version = "0.37.0", features = ["cmake-build", "zstd"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.9"
toml = "0.8.19"


[dev-dependencies]
tempfile = "3.15.0"
